footer updated on all pages

--- a/about_us.html
+++ b/about_us.html
@@ -45,9 +45,17 @@
         <section class="section_padding content_wrap padding-top2rem" id="about_us_section">
             <div class="grid3fit padding1rem gridcenter flexcenter">
                 <div class="about_us_text">
-                    <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
-                    <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
-                    <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).</p>
+                    <p>Over the course of human history, science has developed from our early understanding of fire,
+                        wind, water, and earth to exploring everything from galaxies far away to the very building
+                        blocks of life itself.</p>
+                    <p>The aim of our museum is to create a space where everyone can experience the wonders of our
+                        discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world
+                        around us.</p>
+                    <p>We believe science should not be confined to the textbook, but brought to live through exhibits.
+                        This is why we have over 1000 different exhibits on the many varied subjects of science to
+                        explore. Many of these exhibits are designed for you to interact with and play around to see
+                        science come to life (apart from the dinosaur exhibits – they only come to life at night when
+                        everyone’s gone home).</p>
                 </div>
                 <div class="image">
                     <div class="info_img">
@@ -58,7 +66,8 @@
         </section>
         <div class="section_buttons">
             <div class="info_box">
-                <div class="header_titlebox b_green I_height"><img src="/Icons/I_info.svg" alt="Icon of an I for information"></div>
+                <div class="header_titlebox b_green I_height"><img src="/Icons/I_info.svg"
+                        alt="Icon of an I for information"></div>
                 <div class="triangle"></div>
             </div>
             <div class="triobuttons">
@@ -69,100 +78,96 @@
         </div>
     </main>
     <footer>
-        <div class="content_wrap">
-            <div class="grid3fit">
-                <div class="f_boxes_f">
-                    <div class="csm_i">
-                        <p>Community Science Museum</p>
-                        <p>Verket 1 2580 Folldal</p>
+        <div class="gridfit250 content_wrap">
+            <div class="f_boxes_f">
+                <div class="csm_i">
+                    <p>Community Science Museum</p>
+                    <p>Verket 1 2580 Folldal</p>
+                </div>
+                <div class="open_hours">
+                    <p class="bold">Opening hours:</p>
+                    <div class="item">
+                        <p class="item_l">Monday:</p>
+                        <p class="ho_day_t">Closed</p>
                     </div>
-                    <div class="open_hours">
-                        <p class="bold">Opening hours:</p>
-                        <div class="item">
-                            <p class="item_l">Monday:</p>
-                            <p class="ho_day_t">Closed</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Tuesday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Wednesday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Thursday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Friday:</p>
-                            <p class="ho_day_t">10:00 – 19:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Saturday:</p>
-                            <p class="ho_day_t">9:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Sunday:</p>
-                            <p class="ho_day_t">9:00 – 13:00</p>
-                        </div>
+                    <div class="item">
+                        <p class="item_l">Tuesday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Wednesday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Thursday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Friday:</p>
+                        <p class="ho_day_t">10:00 – 19:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Saturday:</p>
+                        <p class="ho_day_t">9:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Sunday:</p>
+                        <p class="ho_day_t">9:00 – 13:00</p>
                     </div>
                 </div>
-                <div class="f_boxes_f">
-                    <div class="contact_us">
-                        <p class="bold">Contact us:</p>
-                        <p class="item">Phone: +47 38373635</p>
-                        <p class="item">E-mail: CSMuseum@museum.com</p>
+            </div>
+            <div class="f_boxes_f">
+                <div class="contact_us">
+                    <p class="bold">Contact us:</p>
+                    <p class="item">Phone: +47 38373635</p>
+                    <p class="item">E-mail: CSMuseum@museum.com</p>
+                </div>
+                <div class="social_media">
+                    <a href="/">
+                        <figure class="instagram image"></figure>
+                    </a>
+                    <a href="/">
+                        <figure class="facebook image"></figure>
+                    </a>
+                </div>
+            </div>
+            <div class="f_boxes_f links links_f">
+                <a href="">
+                    <p class="item">Events and Exhibits</p>
+                </a>
+                <a href="">
+                    <p class="item">Get involed</p>
+                </a>
+                <a href="">
+                    <p class="item">Explore</p>
+                </a>
+                <a href="">
+                    <p class="item">Prices</p>
+                </a>
+                <a href="">
+                    <p class="item">Accessibility</p>
+                </a>
+                <a href="">
+                    <p class="item">Shop</p>
+                </a>
+                <a href="">
+                    <p class="item">Food and drink</p>
+                </a>
+            </div>
+            <div class="f_boxes_f">
+                <form action="post" class="center_n newsletter">
+                    <p>Subscribe to our newsletter</p>
+                    <label for="name" style="display: none;">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Name">
+                    <label for="email" style="display: none;">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <div>
+                        <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="checkbox"
+                                name="Accept_p_s">Accept <a href="/">privacy
+                                statement</a></label>
                     </div>
-                    <div class="social_media">
-                        <a href="/">
-                            <figure class="instagram image"></figure>
-                        </a>
-                        <a href="/">
-                            <figure class="facebook image"></figure>
-                        </a>
-                    </div>
-                </div>
-                <div class="f_boxes_f links links_f">
-                    <a href="">
-                        <p class="item">Events and Exhibits</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Get involed</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Explore</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Prices</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Accessibility</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Shop</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Food and drink</p>
-                    </a>
-                </div>
-                <div class="f_boxes_f">
-                    <form action="post" class="center_n">
-                        <div class="newsletter">
-                            <legend>Subscribe to our newsletter</legend>
-                            <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
-                            <label for="email"><input type="email" id="email" name="email" placeholder="Email"
-                                    required></label>
-                            <div>
-                                <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox"
-                                        id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy
-                                        statement</a></label>
-                            </div>
-                        </div>
-                        <button class="news_b"><input type="submit" value="Subscribe"
-                                class="button b_green send_b"></button>
-                    </form>
-                </div>
+                    <input type="submit" name="submit" value="Subscribe" class="button b_green send_b news_b">
+                </form>
             </div>
         </div>
     </footer>
