--- a/index.html
+++ b/index.html
@@ -229,19 +229,17 @@
             </div>
             <div class="f_boxes_f">
                 <form action="post" class="center_n newsletter">
-                        <p>Subscribe to our newsletter</p>
-                        <label for="name" style="display: none;">Name</label>
-                        <input type="text" id="name" name="name" placeholder="Name">
-                        <label for="email" style="display: none;">Email</label>
-                        <input type="email" id="email" name="email" placeholder="Email"
-                                required>
-                        <div>
-                            <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="checkbox"
-                                    name="Accept_p_s">Accept <a href="/">privacy
-                                    statement</a></label>
-                        </div>
-                    <input type="submit" name="submit" value="Subscribe"
-                            class="button b_green send_b news_b">
+                    <p>Subscribe to our newsletter</p>
+                    <label for="name" style="display: none;">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Name">
+                    <label for="email" style="display: none;">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <div>
+                        <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="checkbox"
+                                name="Accept_p_s">Accept <a href="/">privacy
+                                statement</a></label>
+                    </div>
+                    <input type="submit" name="submit" value="Subscribe" class="button b_green send_b news_b">
                 </form>
             </div>
         </div>
