--- a/information.html
+++ b/information.html
@@ -164,120 +164,127 @@
             <div class="grid3fit content_wrap">
                 <div>
                     <h3 class="green_underline w_100">Support</h3>
-                    <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community.</p>
-                    <p>You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.</p>
+                    <p>There are various ways you can support the museum. Donations are very welcome and are an
+                        important way we keep this museum open and accessible to the whole community.</p>
+                    <p>You can also support us by donating items of interest to the museum’s collections. If you have
+                        some item or collection that you think others would enjoy, please let us know by contacting our
+                        Collections Department and they will be able to assist you.</p>
                 </div>
                 <div>
                     <h3 class="green_underline w_100">Internship</h3>
-                    <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.</p>
-                    <p>You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community. </p>
+                    <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the
+                        wonders of nature with people? Well you could be just the right person to enjoy an internship at
+                        the museum.</p>
+                    <p>You’ll be learning from a number of different academics and people who are passionate about
+                        science and sharing it with the wider community. </p>
                     <div class="padding-top2rem"><a href="/contact_us.html" class="button b_green">Contact us here</a>
                     </div>
                 </div>
                 <div>
                     <h3 class="green_underline w_100">Volunteer</h3>
-                    <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.</p>
-                    <p>You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.</p>
+                    <p>A number of people volunteer their time and effort to keep the displays in good order and ready
+                        for visitors to come and enjoy. Volunteering has its perks including getting to see behind the
+                        scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff
+                        and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
+                    </p>
+                    <p>You can help volunteer in a number of different spheres. Please contact us if you’d like to find
+                        out more about how you can get involved.</p>
                 </div>
 
             </div>
         </section>
     </main>
     <footer>
-        <div class="content_wrap">
-            <div class="grid3fit">
-                <div class="f_boxes_f">
-                    <div class="csm_i">
-                        <p>Community Science Museum</p>
-                        <p>Verket 1 2580 Folldal</p>
+        <div class="gridfit250 content_wrap">
+            <div class="f_boxes_f">
+                <div class="csm_i">
+                    <p>Community Science Museum</p>
+                    <p>Verket 1 2580 Folldal</p>
+                </div>
+                <div class="open_hours">
+                    <p class="bold">Opening hours:</p>
+                    <div class="item">
+                        <p class="item_l">Monday:</p>
+                        <p class="ho_day_t">Closed</p>
                     </div>
-                    <div class="open_hours">
-                        <p class="bold">Opening hours:</p>
-                        <div class="item">
-                            <p class="item_l">Monday:</p>
-                            <p class="ho_day_t">Closed</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Tuesday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Wednesday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Thursday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Friday:</p>
-                            <p class="ho_day_t">10:00 – 19:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Saturday:</p>
-                            <p class="ho_day_t">9:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Sunday:</p>
-                            <p class="ho_day_t">9:00 – 13:00</p>
-                        </div>
+                    <div class="item">
+                        <p class="item_l">Tuesday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Wednesday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Thursday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Friday:</p>
+                        <p class="ho_day_t">10:00 – 19:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Saturday:</p>
+                        <p class="ho_day_t">9:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Sunday:</p>
+                        <p class="ho_day_t">9:00 – 13:00</p>
                     </div>
                 </div>
-                <div class="f_boxes_f">
-                    <div class="contact_us">
-                        <p class="bold">Contact us:</p>
-                        <p class="item">Phone: +47 38373635</p>
-                        <p class="item">E-mail: CSMuseum@museum.com</p>
+            </div>
+            <div class="f_boxes_f">
+                <div class="contact_us">
+                    <p class="bold">Contact us:</p>
+                    <p class="item">Phone: +47 38373635</p>
+                    <p class="item">E-mail: CSMuseum@museum.com</p>
+                </div>
+                <div class="social_media">
+                    <a href="/">
+                        <figure class="instagram image"></figure>
+                    </a>
+                    <a href="/">
+                        <figure class="facebook image"></figure>
+                    </a>
+                </div>
+            </div>
+            <div class="f_boxes_f links links_f">
+                <a href="">
+                    <p class="item">Events and Exhibits</p>
+                </a>
+                <a href="">
+                    <p class="item">Get involed</p>
+                </a>
+                <a href="">
+                    <p class="item">Explore</p>
+                </a>
+                <a href="">
+                    <p class="item">Prices</p>
+                </a>
+                <a href="">
+                    <p class="item">Accessibility</p>
+                </a>
+                <a href="">
+                    <p class="item">Shop</p>
+                </a>
+                <a href="">
+                    <p class="item">Food and drink</p>
+                </a>
+            </div>
+            <div class="f_boxes_f">
+                <form action="post" class="center_n newsletter">
+                    <p>Subscribe to our newsletter</p>
+                    <label for="name" style="display: none;">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Name">
+                    <label for="email" style="display: none;">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <div>
+                        <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="checkbox"
+                                name="Accept_p_s">Accept <a href="/">privacy
+                                statement</a></label>
                     </div>
-                    <div class="social_media">
-                        <a href="/">
-                            <figure class="instagram image"></figure>
-                        </a>
-                        <a href="/">
-                            <figure class="facebook image"></figure>
-                        </a>
-                    </div>
-                </div>
-                <div class="f_boxes_f links links_f">
-                    <a href="">
-                        <p class="item">Events and Exhibits</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Get involed</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Explore</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Prices</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Accessibility</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Shop</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Food and drink</p>
-                    </a>
-                </div>
-                <div class="f_boxes_f">
-                    <form action="post" class="center_n">
-                        <div class="newsletter">
-                            <legend>Subscribe to our newsletter</legend>
-                            <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
-                            <label for="email"><input type="email" id="email" name="email" placeholder="Email"
-                                    required></label>
-                            <div>
-                                <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox"
-                                        id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy
-                                        statement</a></label>
-                            </div>
-                        </div>
-                        <button class="news_b"><input type="submit" value="Subscribe"
-                                class="button b_green send_b"></button>
-                    </form>
-                </div>
+                    <input type="submit" name="submit" value="Subscribe" class="button b_green send_b news_b">
+                </form>
             </div>
         </div>
     </footer>
