--- a/visit_us.html
+++ b/visit_us.html
@@ -141,10 +141,17 @@
                         <div class="product_img"><img src="/images/samuel-zeller-158996.jpg" alt="Image of a kid"></div>
                     </div>
                     <div class="group_info padding1rem">
-                        <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
-                        <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.</p>
-                        <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.</p>
-                        <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join,<a href="/contact_us.html"> send us a message.</a></p>
+                        <p>Are you a young person looking to learn more about science? Come on down to our museum,
+                            there’s plenty to see and do.</p>
+                        <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time
+                            and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for
+                            interested minds, so make sure you come ready to learn and explore.</p>
+                        <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and
+                            13:00 where you’ll get to explore and experiment with our team of experts.</p>
+                        <p>During the school holidays we run special holiday clubs where you can join other children
+                            your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To
+                            find out more about the holiday club and how you can join,<a href="/contact_us.html"> send
+                                us a message.</a></p>
                     </div>
                 </div>
                 <div class="flex_spacebetween padding-top2rem" id="for_teachers">
@@ -155,8 +162,12 @@
                         </div>
                     </div>
                     <div class="group_info padding1rem">
-                        <p>As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.</p>
-                        <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
+                        <p>As a community-driven museum, we want to work with schools to create places of learning and
+                            exploring. Our team are on hand to give your students guided tours of the museum, teach them
+                            in our learning laboratory, and provide great video presentations that will excite and
+                            inspire them.</p>
+                        <p>Please get in touch with us here to find out more about our facilities and to arrange a time
+                            to bring your students through for a visit.</p>
                         <div class="boxmargin padding1rem visit_g_four">
                             <a href="/contact_us.html" class="button b_green">Contact us here</a>
                         </div>
@@ -171,7 +182,10 @@
                         </div>
                     </div>
                     <div class="group_info padding1rem">
-                        <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
+                        <p>Are you looking to get involved with our team of researchers and academics? Our museum offers
+                            various ways for you to use our resources and contribute towards them. We have online
+                            records, laboratory space, and a working relationship with a number of universities around
+                            the country.</p>
                         <div class="boxmargin padding1rem visit_g_four">
                             <a href="/visit_us.html#for_reserchers" class="button b_green">Reserchers page</a>
                         </div>
@@ -215,100 +229,96 @@
         </section>
     </main>
     <footer>
-        <div class="content_wrap">
-            <div class="grid3fill">
-                <div class="f_boxes_f">
-                    <div class="csm_i">
-                        <p>Community Science Museum</p>
-                        <p>Verket 1 2580 Folldal</p>
+        <div class="gridfit250 content_wrap">
+            <div class="f_boxes_f">
+                <div class="csm_i">
+                    <p>Community Science Museum</p>
+                    <p>Verket 1 2580 Folldal</p>
+                </div>
+                <div class="open_hours">
+                    <p class="bold">Opening hours:</p>
+                    <div class="item">
+                        <p class="item_l">Monday:</p>
+                        <p class="ho_day_t">Closed</p>
                     </div>
-                    <div class="open_hours">
-                        <p class="bold">Opening hours:</p>
-                        <div class="item">
-                            <p class="item_l">Monday:</p>
-                            <p class="ho_day_t">Closed</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Tuesday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Wednesday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Thursday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Friday:</p>
-                            <p class="ho_day_t">10:00 – 19:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Saturday:</p>
-                            <p class="ho_day_t">9:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Sunday:</p>
-                            <p class="ho_day_t">9:00 – 13:00</p>
-                        </div>
+                    <div class="item">
+                        <p class="item_l">Tuesday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Wednesday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Thursday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Friday:</p>
+                        <p class="ho_day_t">10:00 – 19:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Saturday:</p>
+                        <p class="ho_day_t">9:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Sunday:</p>
+                        <p class="ho_day_t">9:00 – 13:00</p>
                     </div>
                 </div>
-                <div class="f_boxes_f">
-                    <div class="contact_us">
-                        <p class="bold">Contact us:</p>
-                        <p class="item">Phone: +47 38373635</p>
-                        <p class="item">E-mail: CSMuseum@museum.com</p>
+            </div>
+            <div class="f_boxes_f">
+                <div class="contact_us">
+                    <p class="bold">Contact us:</p>
+                    <p class="item">Phone: +47 38373635</p>
+                    <p class="item">E-mail: CSMuseum@museum.com</p>
+                </div>
+                <div class="social_media">
+                    <a href="/">
+                        <figure class="instagram image"></figure>
+                    </a>
+                    <a href="/">
+                        <figure class="facebook image"></figure>
+                    </a>
+                </div>
+            </div>
+            <div class="f_boxes_f links links_f">
+                <a href="">
+                    <p class="item">Events and Exhibits</p>
+                </a>
+                <a href="">
+                    <p class="item">Get involed</p>
+                </a>
+                <a href="">
+                    <p class="item">Explore</p>
+                </a>
+                <a href="">
+                    <p class="item">Prices</p>
+                </a>
+                <a href="">
+                    <p class="item">Accessibility</p>
+                </a>
+                <a href="">
+                    <p class="item">Shop</p>
+                </a>
+                <a href="">
+                    <p class="item">Food and drink</p>
+                </a>
+            </div>
+            <div class="f_boxes_f">
+                <form action="post" class="center_n newsletter">
+                    <p>Subscribe to our newsletter</p>
+                    <label for="name" style="display: none;">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Name">
+                    <label for="email" style="display: none;">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <div>
+                        <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="checkbox"
+                                name="Accept_p_s">Accept <a href="/">privacy
+                                statement</a></label>
                     </div>
-                    <div class="social_media">
-                        <a href="/">
-                            <figure class="instagram image"></figure>
-                        </a>
-                        <a href="/">
-                            <figure class="facebook image"></figure>
-                        </a>
-                    </div>
-                </div>
-                <div class="f_boxes_f links links_f">
-                    <a href="">
-                        <p class="item">Events and Exhibits</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Get involed</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Explore</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Prices</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Accessibility</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Shop</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Food and drink</p>
-                    </a>
-                </div>
-                <div class="f_boxes_f">
-                    <form action="post" class="center_n">
-                        <div class="newsletter">
-                            <legend>Subscribe to our newsletter</legend>
-                            <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
-                            <label for="email"><input type="email" id="email" name="email" placeholder="Email"
-                                    required></label>
-                            <div>
-                                <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox"
-                                        id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy
-                                        statement</a></label>
-                            </div>
-                        </div>
-                        <button class="news_b"><input type="submit" value="Subscribe"
-                                class="button b_green send_b"></button>
-                    </form>
-                </div>
+                    <input type="submit" name="submit" value="Subscribe" class="button b_green send_b news_b">
+                </form>
             </div>
         </div>
     </footer>
