--- a/events_and_exhibits.html
+++ b/events_and_exhibits.html
@@ -45,36 +45,36 @@
             <h2 class="header_titlebox b_green">News</h2>
             <div class="grid3fit  content_wrap">
                 <div class="newsbox" id="Professor_of_aeronautics">
-                    <p class="title">Visiting Professor of Aeronautics</p>
+                    <h2 class="title">Visiting Professor of Aeronautics</h2>
                     <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of
                         Technology will be delivering 3 lectures on the development of and where the future lies in this
                         exciting ‘space’.</p>
                     <div class="newsbox_img">
-                        <p class=" b_green text_white event_date">22.09.23 - 18:00</p>
+                        <h3 class=" b_green text_white event_date" aria-label="22.09.23 - 18:00">22.09.23 - 18:00</h3>
                         <div class="product_img">
                             <img src="images/plane.png" alt="Visiting Professor of Aeronautics image">
                         </div>
                     </div>
                 </div>
                 <div class="newsbox" id="night_in_the_museum">
-                    <p class="title">Night in the Museum</p>
+                    <h2 class="title">Night in the Museum</h2>
                     <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs
                         and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring
                         the wonders of science.</p>
                     <div class="newsbox_img">
-                        <p class=" b_green text_white event_date">04.10.23 - 19:00</p>
+                        <h3 class=" b_green text_white event_date" aria-label="04.10.23 - 19:00"> 04.10.23 - 19:00</h3>
                         <div class="product_img"><img src="images/roberto-nickson-396152.jpg"
                                 alt="Night in the Museum image"></div>
                     </div>
                 </div>
                 <div class="newsbox" id="Energetica_exhibition_on_loan">
-                    <p class="title">Energetica Exhibition on Loan</p>
+                    <h2 class="title">Energetica Exhibition on Loan</h2>
                     <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the
                         Community Science Museum. It’s a series of installations that allow visitors to experience the
                         power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’
                         that shows how turbines are able to use and control wind to create power.</p>
                     <div class="newsbox_img">
-                        <p class=" b_green text_white event_date">30.10.23</p>
+                        <h3 class=" b_green text_white event_date" aria-label="30.10.23">30.10.23</h3>
                         <div class="product_img"><img src="images/lightenergy.png"
                                 alt="Visiting Professor of Aeronautics image"></div>
                     </div>
